# HW7_Parallel_count

./: .gitignore  .gitmodules  CMakeLists.txt  MergeCounters.cpp  MergeCounters.h  README.MD  main.cpp
CountWords/: Counter.h  count_words.cpp  count_words.h  print_topk.cpp  print_topk.h
test_dataset/: params.txt
test_dataset/russ/: 1.TXT  10.TXT  11.TXT  12.TXT  13.TXT  14.TXT  15.TXT  16.TXT  17.TXT  18.TXT  19.TXT  2.TXT  20.TXT  21.TXT  23.TXT  24.TXT  26.TXT  27.TXT  28.TXT  29.TXT  30.TXT  31.TXT  32.TXT  33.TXT  35.TXT  36.TXT  37.TXT  38.TXT  39.TXT  4.TXT  40.TXT  41.TXT  42.TXT  43.TXT  44.TXT  45.TXT  5.TXT  6.TXT  7.TXT  9.TXT
